newtype-tools/tests/trybuild/newtype-path.stderr
error: expected `#[newtype(attr1, attr2)]`
 --> tests/trybuild/newtype-path.rs:2:3
  |
2 | #[newtype]
  |   ^^^^^^^
